--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,9 +32,11 @@ jobs:
       - run:
           name: Install pylint
           # This assumes pytest is installed via the install-package step above
-          command: pip install pylint
+          command: | 
+                pip install pylint
       - run: Test the code
-          command: pylint hello.py
+          command: | 
+                pylint hello.py
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
